# phrase-tokenizer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  rsync-duanzi-to-win10.bat  rsync-win10-to-duanzi.bat
.github/workflows/: on-push-schedule-extend-noip.yml  on-push.yml
phrase_tokenizer/: __init__.py  phrase_tok.py
tests/: test_phrase_tok.py  test_phrase_tokenizer.py
