[tool.poetry]
name = "phrase-tokenizer"
version = "0.1.1"
description = "Tokenize an English sentence to phrases"
authors = ["ffreemt"]
readme = "README.md"
repository = "https://github.com/ffreemt/phrase-tokenizer"

[tool.poetry.dependencies]
python = "^3.6.1"
benepar = "^0.1.2"
logzero = "^1.6.3"
tensorflow = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pep257 = "^0.7.0"
pylint = "^2.6.0"
svgling = "^0.3.0"
black = "^20.8b1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ffreemt/phrase-tokenizer/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple/"
name = "tencent"
url = "http://mirrors.tencentyun.com/pypi/simple"
default = true
